[gd_scene load_steps=3 format=3 uid="uid://c5d40mg3cy354"]

[ext_resource type="Script" path="res://Enemies/enemy_spawner.gd" id="1_3w8bf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tvpxv"]

[node name="EnemySpawner" type="Area2D"]
script = ExtResource("1_3w8bf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tvpxv")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
